--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "dev": "ts-node-dev src/index.ts",
+    "mcp": "npm run build && node dist/mcp-server.js",
     "build": "tsc"
   },
   "keywords": [],
@@ -13,6 +14,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@modelcontextprotocol/sdk": "^1.12.0",
     "@octokit/core": "^7.0.2",
     "@octokit/rest": "^18.12.0",
     "@qdrant/js-client-rest": "^1.14.1",
