--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "octokit": "^5.0.2",
     "openai": "^4.103.0",
+    "socket.io": "^4.8.1",
     "ts-node-dev": "^2.0.0",
     "uuid": "^11.1.0"
   },
